# Vibe-Trading

./: .gitignore  Dockerfile  README.md  README_ar.md  README_ja.md  README_ko.md  README_zh.md  docker-compose.yml  prd.json  progress.txt  pyproject.toml
agent/: api_server.py  mcp_server.py
agent/backtest/: metrics.py  runner.py
agent/src/agent/: context.py
agent/src/memory/: persistent.py
agent/src/skills/crypto-entry-analysis/: SKILL.md
agent/src/swarm/: models.py  runtime.py
agent/src/tools/: ext_bridge.py
agent/tests/: test_backtest_runner_security.py  test_loop_helpers.py  test_mcp_server_smoke.py  test_persistent_memory.py  test_security_auth_api.py  test_swarm_run_metadata.py
docs/: auto-trading-plan.md  extension-guide.md  project-overview.md
extensions/: __init__.py  run_live_trading.py
extensions/config/: .env.local.example
extensions/live_trading/: __init__.py  config.py  models.py
extensions/live_trading/engine/: __init__.py  _real_exchange.py  alpha_factors.py  atr_stop.py  btc_conduction.py  exchange.py  execution_gate.py  market_scanner.py  migration.py  phase2.py  position_tracker.py  scheduler.py  tpsl_monitor.py
extensions/scripts/: performance_tracker.py
extensions/tests/: test_alpha_factors.py  test_crypto_entry_analysis_routing.py  test_execution_gate.py  test_live_trading_e2e.py  test_market_scanner.py  test_phase2.py  test_position_tracker.py  test_real_exchange.py  test_run_live_trading_safety.py  test_scheduler.py  test_tpsl_monitor.py
extensions/tools/: __init__.py  example_tool.py  live_trading_tool.py
frontend/: vite.config.ts
